meta-memfault/recipes-memfault/memfaultd/files/memfaultd/src/config/snapshots/memfaultd__config__config_file__test__set_and_write_bool_to_runtime_config@other_key.snap
---
source: memfaultd/src/config/config_file.rs
expression: disk_config_string
---
"{\"key\":true,\"key2\":false}"
