meta-memfault/recipes-memfault/memfaultd/files/memfaultd/src/config/snapshots/memfaultd__config__config_file__test__with_coredump_attributes_all_scalar_types.snap
---
source: memfaultd/src/config/config_file.rs
assertion_line: 716
expression: content
---
{
  "persist_dir": "/media/memfault",
  "tmp_dir": null,
  "tmp_dir_min_headroom_kib": 10240,
  "tmp_dir_min_inodes": 100,
  "tmp_dir_max_usage_kib": 102400,
  "upload_interval_seconds": 3600,
  "heartbeat_interval_seconds": 3600,
  "enable_data_collection": true,
  "enable_dev_mode": false,
  "software_version": null,
  "software_type": null,
  "project_key": "",
  "base_url": "https://device.memfault.com",
  "swupdate": {
    "input_file": "/etc/swupdate.cfg",
    "output_file": "/tmp/swupdate.cfg"
  },
  "reboot": {
    "last_reboot_reason_file": "/media/last_reboot_reason",
    "capture_pstore": false
  },
  "coredump": {
    "compression": "gzip",
    "coredump_max_size_kib": 96000,
    "rate_limit_count": 5,
    "rate_limit_duration_seconds": 3600,
    "capture_strategy": {
      "type": "threads",
      "max_thread_size_kib": 32
    },
    "log_lines": 100,
    "filters": null,
    "attributes": [
      {
        "key": "channel",
        "value": "beta"
      },
      {
        "key": "empty_string",
        "value": ""
      },
      {
        "key": "positive_int",
        "value": 42
      },
      {
        "key": "negative_int",
        "value": -7
      },
      {
        "key": "zero",
        "value": 0
      },
      {
        "key": "float_value",
        "value": 2.5
      },
      {
        "key": "dev_mode_on",
        "value": true
      },
      {
        "key": "dev_mode_off",
        "value": false
      }
    ],
    "attributes_file": "/run/memfault-coredump-attributes.json"
  },
  "fluent-bit": {
    "extra_fluentd_attributes": [],
    "bind_address": "127.0.0.1:5170",
    "max_connections": 4
  },
  "logs": {
    "rotate_size_kib": 10240,
    "rotate_after_seconds": 3600,
    "compression_level": 1,
    "max_lines_per_minute": 1000,
    "log_to_metrics": null,
    "storage": "persist",
    "source": "journald",
    "level_mapping": {
      "enable": false,
      "regex": null
    },
    "extra_attributes": [],
    "max_buffered_lines": 1000,
    "filtering": null
  },
  "chunks-relay": {
    "min_chunks_headroom_kib": 1024
  },
  "mar": {
    "mar_file_max_size_kib": 10240,
    "mar_entry_max_age_seconds": 604800,
    "mar_entry_max_count": 1000
  },
  "http_server": {
    "bind_address": "127.0.0.1:8787"
  },
  "battery_monitor": {
    "battery_info_command": null,
    "auto": true,
    "interval_seconds": 600
  },
  "connectivity_monitor": null,
  "sessions": null,
  "metrics": {
    "enable_daily_heartbeats": false,
    "system_metric_collection": {
      "enable": true,
      "poll_interval_seconds": 10,
      "processes": null,
      "disk_space": null,
      "diskstats": null,
      "network_interfaces": null,
      "cpu": null,
      "memory": null,
      "thermal": null,
      "oui": null,
      "fd": null
    },
    "statsd_server": {
      "bind_address": "127.0.0.1:8125",
      "legacy_gauge_aggregation": false,
      "legacy_key_names": false
    },
    "high_resolution_telemetry": {
      "enable": true,
      "max_samples_per_minute": 750
    },
    "min_max_metrics": []
  },
  "custom_trace": {
    "log_compression": "gzip",
    "rate_limit_count": 5,
    "rate_limit_duration_seconds": 3600
  },
  "persist_storage": null
}
